add a context menu option to set a particular definition as base

--- a/src/IronyModManager/Localization/en.json
+++ b/src/IronyModManager/Localization/en.json
@@ -285,7 +285,8 @@
         },
         "CompareSelectorContextMenu": {
             "OpenFile": "Open File",
-            "OpenDirectory": "Open Directory"
+            "OpenDirectory": "Open Directory",
+            "SetAsBase" : "Set as base for 3-way merge"
         },
         "ContextMenu": {
             "CopyAll": "Copy All",
